--- a/gradle.properties
+++ b/gradle.properties
@@ -3,5 +3,6 @@ org.gradle.jvmargs = -Xmx2G
 minecraft_version = 1.20.4
 parchment_version = 2024.04.14
 forge_version = 237
-fabric_version = 0.15.0
+fabric_version = 0.15.11
 fabric_api_version = 0.97.1
+mixin_version = 0.13.4+mixin.0.8.5
