add Player and ServerPlayer, inline things

--- a/src/forge/resources/META-INF/accesstransformer.cfg
+++ b/src/forge/resources/META-INF/accesstransformer.cfg
@@ -1,1 +1,5 @@
 public net.minecraft.world.entity.Entity hasVisualFire
+public net.minecraft.world.food.FoodData tickTimer
+public net.minecraft.server.level.ServerPlayer seenCredits
+public net.minecraft.server.level.ServerPlayer enteredNetherPosition
+public net.minecraft.nbt.ListTag <init>(Ljava/util/List;B)V
