comments, a license, and other cleanup

--- a/src/forge/resources/META-INF/neoforge.mods.toml
+++ b/src/forge/resources/META-INF/neoforge.mods.toml
@@ -1,7 +1,7 @@
 modLoader="javafml"
 loaderVersion="[47,)"
 issueTrackerURL="" # TODO
-license = "MIT" # TODO add file
+license = "MIT"
 
 [[mods]]
 modId = "fastnbt"
