--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,10 @@ org.gradle.parallel = true
 
 minecraft_version = 1.20.4
 parchment_version = 2024.04.14
+
 forge_version = 237
 fabric_version = 0.15.11
+
 fabric_api_version = 0.97.1
 mixin_version = 0.13.4+mixin.0.8.5
+proguard_version = 7.5.0
